Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13560

restart_and_restore.inc does not pass --innodb-undo-tablespaces to --copy-back

    XMLWordPrintable

Details

    • 10.1.29

    Description

      We should run all of --suite=mariabackup tests with at least two different combinations for innodb_undo_tablespaces. The default value is 0.

      A major problem is that the restore tests always invoke --copy-back without an innodb_undo_tablespaces parameter. I tested both by invoking

      ./mtr --mysqld=--innodb-undo-tablespaces=3 --suite=mariabackup
      

      and by creating an .opt file with the parameter in it.
      Backup does get the parameter right, maybe also prepare does get it.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.